//         Then go the changes in the existing behavior. They usually start with "Update".
//     Bugfixes:
//         Bugfixes go there.
//     Internal changes: 
//         Changes to the code that do not affect the behavior of the program.
----------------------------------------------------------------------------------------------------------------------
Version 0.7.4
Date:
    Bugfixes:
        - Fix a possible threading race while destroying textures, which could cause an illegal access crash.
----------------------------------------------------------------------------------------------------------------------
Version 0.7.3
Date: July 21st 2024
    Features:
        - Use modern Direct3D on Windows.
        - Add the option to specify how many beacons, with what modules, should be applied on a per-building-type
          basis, in addition to the global and per-recipe-row settings.
        - Allow adding technologies to the tables to produce research units.
        - Add settings for research speed and productivity bonuses, to correctly calculate lab speed and counts.
    Bugfixes:
        - Fix PageSearch scrollbar not working.
        - Refresh the milestones display after adding or removing milestones.
    Internal changes:
        - Finish the namespace rename from YAFC to Yafc.
----------------------------------------------------------------------------------------------------------------------
Version 0.7.2
Date: June 23rd 2024
    Features:
        - Add several right-click and keyboard shortcuts, notably Enter/Return to close most dialogs.
        - Add UI rebuilding itself on resize.
        - When opening the main window, use the same size it was when it was last closed.
        - Use calculated width for first column of Summary page.
    Bugfixes:
        - Fix that some pages couldn't be deleted.
        - Fix that returning to the Welcome Screen could break the panels in the main window.
        - Make horizontal scrollbar clickable/draggable.